[project]
name = "mpv-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "fastapi>=0.112.3",
    "rich>=12.2.0",
    "websockets>=15.0.1",
    "uvicorn>=0.31.1",
    "aiosqlite>=0.21.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.1",
    "passlib>=1.7.4",
    "jose==1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.24"
]

[tool.uv]
cache-dir = "f:/.local/uvcache"
